# Style-bot

./: README.md  bot.sqlite3  botе.sqlite3  botеt.sqlite3  botеte.sqlite3  botеtet.sqlite3  config.py  dao.py  database.py  keyboards.py  main.py  pyproject.toml  texts.py
